front-back연결을 cors 경고 처리를 위해 security 기본설정. spring data jpa일부 적용

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -11,8 +11,8 @@ spring:
       org.hibernate.orm.jdbc.extract: TRACE
       org.springframework.transaction.interceptor: TRACE
   jpa:
-    hibernate:
-      ddl-auto: create
+    #hibernate:
+    #  ddl-auto: create #스키마 변경시에만 수정.
     properties:
       hibernate:
         show_sql: true
