Apis 데이터 수신 확인

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,8 +1,9 @@
 server:
   port: 8050
+
 spring:
   profiles:
-    active: dev
+    active: dev # 기본 활성 프로파일
     include: secret
   logging:
     level:
@@ -11,8 +12,6 @@ spring:
       org.hibernate.orm.jdbc.extract: TRACE
       org.springframework.transaction.interceptor: TRACE
   jpa:
-    #hibernate:
-    #  ddl-auto: create #스키마 변경시에만 수정.
     properties:
       hibernate:
         show_sql: true
