--- a/hfback/src/main/resources/application.yml
+++ b/hfback/src/main/resources/application.yml
@@ -35,9 +35,9 @@ custom:
     frontUrl: "http://${custom.dev.cookieDomain}:5173"
     backUrl: "http://${custom.dev.cookieDomain}:${server.port}"
   prod:
-    cookieDomain: blog.sik2.site
-    frontUrl: "https://www.${custom.prod.cookieDomain}"
-    backUrl: "https://api.${custom.prod.cookieDomain}"
+    cookieDomain:
+    frontUrl:
+    backUrl:
   site:
     name: "BLOG DEV"
     cookieDomain: "${custom.dev.cookieDomain}"
