--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,25 +1,4 @@
 server:
-<<<<<<< HEAD
-  port: 8050
-
-spring:
-  profiles:
-    active: dev # 기본 활성 프로파일
-    include: secret
-  logging:
-    level:
-      com.ll.chatApp: DEBUG
-      org.hibernate.orm.jdbc.bind: TRACE
-      org.hibernate.orm.jdbc.extract: TRACE
-      org.springframework.transaction.interceptor: TRACE
-  jpa:
-    properties:
-      hibernate:
-        show_sql: true
-        format_sql: true
-        use_sql_comments: true
-        default_batch_fetch_size: 100
-=======
   port: 8090
 spring:
   output:
@@ -40,12 +19,14 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+        show_sql: true
         format_sql: true
         highlight_sql: true
         use_sql_comments: true
+
 logging:
   level:
-    com.ll.blog: DEBUG
+    com.ll.hfback: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
