--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -19,12 +19,14 @@ spring:
     properties:
       hibernate:
         default_batch_fetch_size: 100
+        show_sql: true
         format_sql: true
         highlight_sql: true
         use_sql_comments: true
+
 logging:
   level:
-    com.ll.blog: DEBUG
+    com.ll.hfback: DEBUG
     org.hibernate.SQL: DEBUG
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
