--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ server:
   port: 8090
 spring:
   datasource:
-    url: jdbc:mysql://host.docker.internal:3306/hf_prod
+    url: jdbc:mysql://172.17.0.1:3306/hf_prod
     username: root
     password: 1234
     driver-class-name: com.mysql.cj.jdbc.Driver
