fix: applicaiton.yml site에 url 미변경으로 수정

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -43,5 +43,5 @@ custom:
   site:
     name: "SITE PROD"
     cookieDomain: "${custom.prod.cookieDomain}"
-    frontUrl: "${custom.dev.frontUrl}"
-    backUrl: "${custom.dev.backUrl}"
+    frontUrl: "${custom.prod.frontUrl}"
+    backUrl: "${custom.prod.backUrl}"
