--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,8 @@ spring:
         format_sql: true
         highlight_sql: true
         use_sql_comments: true
+  config:
+    import: classpath:application-secret.yml
 
 logging:
   level:
