--- a/src/main/resources/application-test.yml
+++ b/src/main/resources/application-test.yml
@@ -1,1 +1,16 @@
-spring.application.name=hfback
+spring:
+  datasource:
+    url: jdbc:h2:mem:testdb;MODE=MySQL
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    hibernate:
+      ddl-auto: create
+    properties:
+      hibernate:
+        format_sql: true
+        show_sql: true
+  sql:
+    init:
+      mode: never
