--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -41,12 +41,35 @@ spring:
               - email
               - profile
             redirect-uri: "http://localhost:8090/login/oauth2/code/{registrationId}"
+          naver:
+            scope:
+              - nickname
+              - email
+              - profile_image
+            client-name: Naver
+            authorization-grant-type: authorization_code
+            redirect-uri: "http://localhost:8090/login/oauth2/code/{registrationId}"
+          github:
+            scope:
+              - read:user
+              - user:email
+            redirect-uri: "http://localhost:8090/login/oauth2/code/{registrationId}"
         provider:
           kakao:
             authorization-uri: https://kauth.kakao.com/oauth/authorize
             token-uri: https://kauth.kakao.com/oauth/token
             user-info-uri: https://kapi.kakao.com/v2/user/me    # 사용자 정보 조회 URI
             user-name-attribute: id    # 사용자 정보에서 사용자 이름에 해당하는 속성
+          naver:
+            authorization-uri: https://nid.naver.com/oauth2.0/authorize
+            token-uri: https://nid.naver.com/oauth2.0/token
+            user-info-uri: https://openapi.naver.com/v1/nid/me
+            user-name-attribute: response
+          github:
+            authorization-uri: https://github.com/login/oauth/authorize
+            token-uri: https://github.com/login/oauth/access_token
+            user-info-uri: https://api.github.com/user
+            user-name-attribute: id
   mail:
     host: smtp.gmail.com
     port: 587
