fix: 쿠키 유효 범위 재설정

--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -26,5 +26,8 @@ logging:
     org.hibernate.orm.jdbc.extract: INFO
     org.springframework.transaction.interceptor: INFO
 custom:
+  cookie:
+    domain: hf.codingtori.site
   site:
     name: "My Site Prod"
+    cookieDomain: hf.codingtori.site
