--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -96,6 +96,7 @@ logging:
     org.hibernate.orm.jdbc.bind: TRACE
     org.hibernate.orm.jdbc.extract: TRACE
     org.springframework.transaction.interceptor: TRACE
+
 custom:
   dev:
     cookieDomain: localhost
@@ -110,3 +111,5 @@ custom:
     cookieDomain: "${custom.prod.cookieDomain}"
     frontUrl: "${custom.prod.frontUrl}"
     backUrl: "${custom.prod.backUrl}"
+  cookie:
+    domain: localhost
