--- a/src/main/resources/application-prod.yml
+++ b/src/main/resources/application-prod.yml
@@ -3,13 +3,6 @@ server:
 spring:
   datasource:
     url: jdbc:mysql://172.17.0.1:3306/hf_prod
-    username: root
-    password: 1234
-    driver-class-name: com.mysql.cj.jdbc.Driver
-  data:
-    redis:
-      host: redis_1    # Docker container name으로 변경
-      port: 6379
   jpa:
     hibernate:
       ddl-auto: update
@@ -18,6 +11,18 @@ spring:
         format_sql: false
         highlight_sql: false
         use_sql_comments: false
+  security:
+    oauth2:
+      client:
+        registration:
+          kakao:
+            redirect-uri: "${custom.site.backUrl}/login/oauth2/code/{registrationId}"
+          google:
+            redirect-uri: "${custom.site.backUrl}/login/oauth2/code/{registrationId}"
+          naver:
+            redirect-uri: "${custom.site.backUrl}/login/oauth2/code/{registrationId}"
+          github:
+            redirect-uri: "${custom.site.backUrl}/login/oauth2/code/{registrationId}"
 logging:
   level:
     com.ll.demo03: INFO
@@ -28,6 +33,3 @@ logging:
 custom:
   cookie:
     domain: hf.codingtori.site
-  site:
-    name: "My Site Prod"
-    cookieDomain: hf.codingtori.site
