--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -5,6 +5,9 @@ spring:
   datasource:
     url: jdbc:mysql://127.0.0.1:3306/test_db?useUnicode=true&characterEncoding=utf8&autoReconnect=true&serverTimezone=Asia/Seoul
   data:
+    elasticsearch:
+      client:
+        uris: http://localhost:9200
     redis:
       host: localhost
       port: 6379
