fix: mappings 사라진 코드 복구

--- a/src/main/resources/elasticsearch/mappings.json
+++ b/src/main/resources/elasticsearch/mappings.json
@@ -1,5 +1,14 @@
 {
   "properties": {
+    "festival_name": {
+      "type": "text",
+      "fields": {
+        "keyword": {
+          "type": "keyword",
+          "ignore_above": 256
+        }
+      }
+    },
     "festival_area": {
       "type": "text",
       "analyzer": "korean"
