chore: 배포용 수정

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - 'src/**'
       - 'build.gradle'
       - 'Dockerfile'
-      - 'readme.md'
+      - 'README.md'
       - 'infraScript/**'
     branches:
       - 'main'
